@@ -392,7 +392,8 @@ In addition to the bindings generated by @racket[struct],
 @racket[serializable-struct] binds
 @racketidfont{deserialize-info:}@racket[_id]@racketidfont{-v0} to
 deserialization information. Furthermore, in a module context, it
-automatically @racket[provide]s this binding.
+automatically @racket[provide]s this binding in a @racket[deserialize-info]
+submodule using @racket[module+].
 
 The @racket[serializable-struct] form enables the construction of
 structure instances from places where @racket[id] is not accessible,
@@ -550,7 +551,10 @@ must be one of the following:
  @item{If @racket[deserialize-id] is an identifier, and if
  @racket[(identifier-binding deserialize-id)] produces a list, then
  the third element is used for the exporting module, otherwise the
- top-level is assumed. In either case, @racket[syntax-e] is used to
+ top-level is assumed. Before trying an exporting module directly,
+ its @racket[deserialize-info] submodule is tried; the module
+ itself is tried if no @racket[deserialize-info]
+ submodule is available. In either case, @racket[syntax-e] is used to
  obtain the name of an exported identifier or top-level definition.}
 
  @item{If @racket[deserialize-id] is a symbol, it indicates a
